--- a/css/font.css
+++ b/css/font.css
@@ -54,5 +54,14 @@
 /* Noto Sans KR */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;600;700;800&display=swap');
 
-/* Montserrat - 영문 로고용 */
+/* Montserrat */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600;700;800&display=swap');
+
+/* Nunito */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@700;800&display=swap');
+
+/* Quicksand */
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@600;700&display=swap');
+
+/* Fredoka */
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@600;700&display=swap');
