--- a/css/layout.css
+++ b/css/layout.css
@@ -84,7 +84,7 @@ header .hrel {
 }
 
 .header_logo .logo_txt {
-  font-family: 'Nunito', sans-serif;
+  font-family: 'GMarketSans', sans-serif;
   font-size: 2.4rem;
   font-weight: 800;
   color: var(--ink-900);
@@ -1048,8 +1048,8 @@ footer .rel:last-child {
 }
 
 .ftr_brand span {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
+  font-family: 'GMarketSans', sans-serif;
+  font-weight: 700;
   font-size: 2rem;
   color: var(--primary);
 }
