Update layout and media

--- a/css/media.css
+++ b/css/media.css
@@ -159,6 +159,10 @@
   }
   
   /* Typography */
+  #section0 .tit_wrap h2.tit {
+    font-size: 4rem;
+  }
+
   .tit_wrap h2.tit {
     font-size: 3.4rem;
   }
@@ -510,7 +514,7 @@
   section {
     padding: 6rem 2rem;
   }
-  
+
   .tit_wrap h2.tit {
     font-size: 2.8rem;
     line-height: 1.3;
@@ -541,9 +545,9 @@
   }
   
   #section0 h2.tit {
-    font-size: 2.6rem;
+    font-size: 3.2rem;
   }
-  
+
   #section0 .hero_img {
     width: 100%;
     max-width: 22rem;
@@ -610,7 +614,7 @@
   .scroll_indicator {
     display: none;
   }
-  
+
   /* Sections - 텍스트 가운데 정렬 */
   #section1 .tit_wrap,
   #section2 .tit_wrap,
@@ -893,6 +897,10 @@
     width: 100%;
   }
   
+  #section0 .tit_wrap h2.tit {
+    font-size: 3.2rem;
+  }
+
   .tit_wrap h2.tit {
     font-size: 2.4rem;
   }
@@ -906,8 +914,8 @@
   }
 
   .float_card:nth-child(2) {
-    top: 55%;
-    right: 5%;
+    top: 49%;
+    right: 1%;
   }
 
   .float_card:nth-child(3) {
